# a1-addons-repo-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  copier.yml  pyproject.toml
src/: .editorconfig  .flake8  .gitattributes  .gitignore.jinja  .isort.cfg  .pre-commit-config.yaml.jinja  LICENSE.jinja  README.md.jinja  {% if use_pylint_odoo %}.pylintrc{% endif %}.jinja  {% if use_ruff %}.ruff.toml{% endif %}.jinja  {{ _copier_conf.answers_file }}.jinja
src/.github/workflows/: pre-commit.yml.jinja  test.yml.jinja
