[project]
name = "odoo-project-github-template"
version = "1.1.0"
description = "Copier template for A1 Odoo addon repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "A1" }]
dependencies = [
    "copier>=9",
    "jinja2>=3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-copie>=0.1",
]

